themes/custom/assets/css/components/header.css
.header {
  backdrop-filter: blur(5px);
  background-color: #31324481;
  color: #31324481;
  left: 0;
  position: fixed;
  top: 0;
  z-index: 5;
  border-color: rgba(0,0,0,0);
  box-shadow: 0px 5px 5px;
  transition: transform 0.3s ease, opacity 0.3s ease; width: 100%;
}

.header li {
  margin-right: 1rem;
  white-space: nowrap;
  background-color: #1e1e2e;
  padding: 0.5rem;
  margin: 0.2rem;
  border-radius: 2rem;
  transition: all 0.3s ease;
  box-shadow: 0px 5px 5px #a6e3a1;
  outline: #313244 solid 1px;
}

.header li:hover {
  scale: 1.1;
  outline: #a6e3a1 solid 1px; 
}

.header li:active {
  scale: 1;
  transform: translateY(10%);
  box-shadow: 0px 2px 5px #94e2d5;
}

.header ul {
  display: flex;
  list-style: none;
  flex-wrap: wrap;
}

.header .nav-title {
  display: inline-block;
  height: 100%;
  margin-top: 1rem;
  padding-left: 15px;
}

.nav-title a {
  height: 50px;
}

.header .nav-links {
  float: right;
}

.header.hidden {
  opacity: 0;
  transform: translateY(-100%);
}

/* For mobile */
@media screen and (max-width: 1120px) { 
  .header {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
  }

  .nav-title a {
    height: auto;
  }

  .header .nav-title {
    padding: 0;
  }
  .header ul {
    justify-content: center;
  }
}

